Bug 452923 - No password dialog for a LUKS encrypted device when opened in a new tab from the Location Bar's popup
Summary: No password dialog for a LUKS encrypted device when opened in a new tab from ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: location (other bugs)
Version First Reported In: 21.12.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-23 19:04 UTC by phd
Modified: 2022-04-27 08:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description phd 2022-04-23 19:04:08 UTC
SUMMARY
No password dialog is opened for a LUKS encrypted device when its entry is opened in a new tab (with the Middle Mouse Button) from the Location Bar popup.

STEPS TO REPRODUCE
0. Hide Places panel in Dolphin (F9)
1. Attach a LUKS encrypted removable device
2. Expand Location Bar's icon to see a QMenu of places and devices
3. Open the "Removable Devices" submenu
4. Click on the (yet unmounted - green icon) LUKS device with the Middle Mouse Button (!)

OBSERVED RESULT
1. no password dialog is shown (BUG)
2. a new tab is opened for this LUKS device (BUG?)
3. new tab's location is copied from the current tab (BUG), but its content is empty ("Folder is empty")

EXPECTED RESULT
1. password dialog shown
2a. location of the new tab set to something sane (instead of copying current tab) before the LUKS device is mounted
2b. OR no new tab opened until the device is successfully mounted (see the SIDE NOTE below)

SIDE NOTE
Opening a LUKS encrypted device with the Middle Mouse Button from the Places Panel does not open a new tab, instead it shows the password dialog immediately. The new tab is only opened after successful mount (but it is not activated, which may be another bug).

SOFTWARE/OS VERSIONS
Linux: Kubuntu 21.10
Dolphin Version: 21.12.3
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2022-04-25 18:33:51 UTC
Can confirm!
Comment 2 Kai Uwe Broulik 2022-04-25 18:36:59 UTC
Bug in KUrlNavigatorPathSelectorEventFilter, the left-click does the same mount-then-activate dance as KFilePlacesView, whereas the middle click goes through a different codepath and just emits tabRequested, prompting Dolphin to open a new tab.
Comment 3 Kai Uwe Broulik 2022-04-25 18:44:47 UTC
Actually, just KUrlNavigatorPlacesSelector. The Path thing is for middle-clicking the breadcrumb paths menu items.
Comment 5 Kai Uwe Broulik 2022-04-27 08:08:07 UTC
Git commit 7c9233909cf800c36464bbd27070d48e36edbe22 by Kai Uwe Broulik.
Committed on 27/04/2022 at 07:32.
Pushed by broulik into branch 'master'.

[KUrlNavigatorPlacesSelector] Do storage setup also when requesting a new tab

M  +24   -12   src/filewidgets/kurlnavigatorplacesselector.cpp
M  +4    -1    src/filewidgets/kurlnavigatorplacesselector_p.h

https://invent.kde.org/frameworks/kio/commit/7c9233909cf800c36464bbd27070d48e36edbe22