[KUrlNavigatorPlacesSelector] Do storage setup also when requesting a new tab

BUG: 452923